# rizzo

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
derive/: Cargo.toml
derive/src/: common.rs  lib.rs
derive/src/impls/: columns.rs  deref_columns.rs
derive/tests/: main.rs
src/: ctl.rs  ctl_test.rs  lib.rs  stark.rs  util.rs  vm.rs  word.rs
src/alu/: addcy.rs  columns.rs  mod.rs  stark.rs
src/arith/: addcy.rs  columns.rs  flags.rs  mod.rs  stark.rs  trace.rs
src/bits/: columns.rs  flags.rs  logic.rs  mod.rs  shift.rs  stark.rs  trace.rs
src/bytes/: columns.rs  mod.rs  stark.rs  trace.rs
src/cpu/: alu.rs  arith.rs  branch.rs  clock.rs  columns.rs  control_flow.rs  decode.rs  flag.rs  flags.rs  jump.rs  membus.rs  memio.rs  mod.rs  reg.rs  stark.rs
src/cpu/columns/: mod.rs  shared.rs
src/iter/: adapters.rs  mod.rs  traits.rs
src/logic/: columns.rs  flags.rs  logic.rs  shift.rs  stark.rs
src/mem/: columns.rs  mod.rs  stark.rs  trace.rs
src/pack/: columns.rs  mod.rs  stark.rs  trace.rs
src/vm/: mod.rs  opcode.rs
