[package]
name = "rizzo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gio256/rizzo"
readme = "README.md"
categories = ["cryptography", "emulators"]

[dependencies]
anyhow = "1.0.86"
hashbrown = "0.14.0"
plonky2 = "0.2.2"
plonky2_maybe_rayon = "0.2.0"
plonky2_util = "0.2.0"
starky = "0.4.0"
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.8.5"
paste = "1.0"
