[package]
name = "rizzo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gio256/rizzo"
readme = "README.md"
categories = ["cryptography", "emulators"]

[dependencies]
anyhow = "1.0.86"
hashbrown = "0.14.0"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "7ba3c1f298faddb99543b59fe24d898f092f78e8" }
plonky2_maybe_rayon = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "7ba3c1f298faddb99543b59fe24d898f092f78e8" }
plonky2_util = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "7ba3c1f298faddb99543b59fe24d898f092f78e8" }
starky = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "7ba3c1f298faddb99543b59fe24d898f092f78e8" }
static_assertions = "1.1.0"
itertools = "0.13.0"
rizzo_derive = { path = "derive" }

[dev-dependencies]
rand = "0.8.5"
paste = "1.0"

# TODO: remove
# [patch."https://github.com/0xPolygonZero/plonky2"]
# plonky2 = { path = "../ext/plonky2/plonky2"}
# plonky2_maybe_rayon = { path = "../ext/plonky2/maybe_rayon"}
# plonky2_util = { path = "../ext/plonky2/util"}
# starky = { path = "../ext/plonky2/starky"}
